fixed: mocha definition is hardly readable #4787

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -59,7 +59,7 @@ header {
   animation: fadein 1s forwards, slideright 1s forwards;
   color: #c29d7f;
   font-size: 30px;
-  font-weight: 100;
+  font-weight: 200;
   letter-spacing: 2px;
   margin-top: -158px;
   margin-left: 185px;
@@ -150,7 +150,7 @@ h3 > code {
 
 #content > p:first-child {
   font-size: 20px;
-  font-weight: 200;
+  font-weight: 400;
   letter-spacing: 1px;
 }
 
